--- a/BasicTestNg/test-output/emailable-report.html
+++ b/BasicTestNg/test-output/emailable-report.html
@@ -9,26 +9,18 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Suite</th></tr>
-<tr><td><a href="#t0">TestGroup</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">32</td><td>functest</td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">Test</a></td><td class="num">5</td><td class="num">0</td><td class="num attn">2</td><td class="num">56</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">8</th><th class="num">0</th><th class="num attn">2</th><th class="num">88</th><th colspan="2"></th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">1</td><td class="num">0</td><td class="num attn">1</td><td class="num">961</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">TestGroup &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">test.Test1</td><td><a href="#m0">testMethod1</a></td><td rowspan="1">1515063792675</td><td rowspan="1">6</td></tr><tr class="passedeven"><td><a href="#m1">testMethod2</a></td><td rowspan="1">1515063792682</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m2">testMethod3</a></td><td rowspan="1">1515063792688</td><td rowspan="1">2</td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">test.SampleTestClassOne</td><td><a href="#m3">ClassOneTestTwo</a></td><td rowspan="1">1515063792796</td><td rowspan="1">2</td></tr><tr class="failedodd"><td rowspan="1">test.SampleTestClassOne2</td><td><a href="#m4">ClassOneTestTwo2</a></td><td rowspan="1">1515063792774</td><td rowspan="1">2</td></tr><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">test.SampleTestClassOne</td><td><a href="#m5">ClassOneTestOne</a></td><td rowspan="1">1515063792783</td><td rowspan="1">5</td></tr><tr class="passedeven"><td><a href="#m6">ClassOneTestThree</a></td><td rowspan="1">1515063792791</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m7">testSingleString</a></td><td rowspan="1">1515063792805</td><td rowspan="1">2</td></tr><tr class="passedodd"><td rowspan="2">test.SampleTestClassOne2</td><td><a href="#m8">ClassOneTestOne2</a></td><td rowspan="1">1515063792761</td><td rowspan="1">4</td></tr><tr class="passedodd"><td><a href="#m9">ClassOneTestThree2</a></td><td rowspan="1">1515063792768</td><td rowspan="1">3</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">howToDoInJava.testNg.TimeoutMethod</td><td><a href="#m0">timeTestOne</a></td><td rowspan="1">1563857231212</td><td rowspan="1">520</td></tr><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">howToDoInJava.testNg.TimeoutMethod</td><td><a href="#m1">timeTestTwo</a></td><td rowspan="1">1563857231736</td><td rowspan="1">412</td></tr></tbody>
 </table>
-<h2>TestGroup</h2><h3 id="m0">test.Test1#testMethod1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">test.Test1#testMethod2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">test.Test1#testMethod3</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Test</h2><h3 id="m3">test.SampleTestClassOne#ClassOneTestTwo</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: null
-	at test.SampleTestClassOne.ClassOneTestTwo(SampleTestClassOne.java:69)
-... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">test.SampleTestClassOne2#ClassOneTestTwo2</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: null
-	at test.SampleTestClassOne2.ClassOneTestTwo2(SampleTestClassOne2.java:62)
-... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">test.SampleTestClassOne#ClassOneTestOne</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">test.SampleTestClassOne#ClassOneTestThree</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">test.SampleTestClassOne#testSingleString</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Cedric</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m8">test.SampleTestClassOne2#ClassOneTestOne2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m9">test.SampleTestClassOne2#ClassOneTestThree2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">howToDoInJava.testNg.TimeoutMethod#timeTestOne</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.testng.internal.thread.ThreadTimeoutException: Method howToDoInJava.testNg.TimeoutMethod.timeTestOne() didn&apos;t finish within the time-out 500
+	at java.base@10.0.1/java.lang.Thread.interrupt(Thread.java:1016)
+	at java.base@10.0.1/java.util.concurrent.Executors$RunnableAdapter.call(Executors.java:514)
+	at java.base@10.0.1/java.util.concurrent.FutureTask.run(FutureTask.java:264)
+	at java.base@10.0.1/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1135)
+	at java.base@10.0.1/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
+	at java.base@10.0.1/java.lang.Thread.run(Thread.java:844)
+... Removed 2 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">howToDoInJava.testNg.TimeoutMethod#timeTestTwo</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
