--- a/BasicTestNg/test-output/old/Default suite/classes.html
+++ b/BasicTestNg/test-output/old/Default suite/classes.html
@@ -4,22 +4,44 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>test.SampleTestClassOne2</td>
+<td>howToDoInJava.testNg.DependentTestExamples</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ClassOneTestThree2</td>
+<td>groupTestThree</td>
+<td>test-group </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>testOne</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>ClassOneTestOne2</td>
+<td>testThree</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>ClassOneTestTwo2</td>
+<td>testFour</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>groupTestOne</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>groupTestTwo</td>
+<td>test-group </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>testFive</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>testTwo</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -34,22 +56,18 @@
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
-<td>test.SampleTestClassOne</td>
+<td>howToDoInJava.testNg.ParentClassTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ClassOneTestOne</td>
+<td>testOne</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>ClassOneTestThree</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>ClassOneTestTwo</td>
+<td>testTwo</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
