--- a/BasicTestNg/test-output/old/Default suite/methods.html
+++ b/BasicTestNg/test-output/old/Default suite/methods.html
@@ -1,24 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b58d72">  <td>18/01/04 12:10:02</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;SampleTestClassOne.beforeTest()[pri:0, instance:test.SampleTestClassOne@643b1d11]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@644166178</td>   <td></td> </tr>
-<tr bgcolor="acb575">  <td>18/01/04 12:10:02</td>   <td>10</td> <td>&nbsp;</td><td title="&gt;&gt;SampleTestClassOne2.beforeTest()[pri:0, instance:test.SampleTestClassOne2@100fc185]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@644166178</td>   <td></td> </tr>
-<tr bgcolor="acb575">  <td>18/01/04 12:10:02</td>   <td>40</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleTestClassOne2.ClassOneTestOne2()[pri:0, instance:test.SampleTestClassOne2@100fc185]">ClassOneTestOne2</td> 
-  <td>main@644166178</td>   <td></td> </tr>
-<tr bgcolor="acb575">  <td>18/01/04 12:10:02</td>   <td>52</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleTestClassOne2.ClassOneTestThree2()[pri:0, instance:test.SampleTestClassOne2@100fc185]">ClassOneTestThree2</td> 
-  <td>main@644166178</td>   <td></td> </tr>
-<tr bgcolor="acb575">  <td>18/01/04 12:10:02</td>   <td>55</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleTestClassOne2.ClassOneTestTwo2()[pri:0, instance:test.SampleTestClassOne2@100fc185]">ClassOneTestTwo2</td> 
-  <td>main@644166178</td>   <td></td> </tr>
-<tr bgcolor="b58d72">  <td>18/01/04 12:10:02</td>   <td>86</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleTestClassOne.ClassOneTestOne()[pri:0, instance:test.SampleTestClassOne@643b1d11]">ClassOneTestOne</td> 
-  <td>main@644166178</td>   <td></td> </tr>
-<tr bgcolor="b58d72">  <td>18/01/04 12:10:02</td>   <td>89</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleTestClassOne.ClassOneTestThree()[pri:0, instance:test.SampleTestClassOne@643b1d11]">ClassOneTestThree</td> 
-  <td>main@644166178</td>   <td></td> </tr>
-<tr bgcolor="b58d72">  <td>18/01/04 12:10:02</td>   <td>93</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleTestClassOne.ClassOneTestTwo()[pri:0, instance:test.SampleTestClassOne@643b1d11]">ClassOneTestTwo</td> 
-  <td>main@644166178</td>   <td></td> </tr>
-<tr bgcolor="b58d72">  <td>18/01/04 12:10:02</td>   <td>98</td> <td>&nbsp;</td><td title="&lt;&lt;SampleTestClassOne.afterTest()[pri:0, instance:test.SampleTestClassOne@643b1d11]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@644166178</td>   <td></td> </tr>
-<tr bgcolor="acb575">  <td>18/01/04 12:10:02</td>   <td>98</td> <td>&nbsp;</td><td title="&lt;&lt;SampleTestClassOne2.afterTest()[pri:0, instance:test.SampleTestClassOne2@100fc185]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@644166178</td>   <td></td> </tr>
+<tr bgcolor="a1ed7d">  <td>19/07/23 08:43:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DependentTestExamples.groupTestThree()[pri:0, instance:howToDoInJava.testNg.DependentTestExamples@2e377400]">groupTestThree</td> 
+  <td>main@1311146128</td>   <td></td> </tr>
+<tr bgcolor="a1ed7d">  <td>19/07/23 08:43:19</td>   <td>14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DependentTestExamples.groupTestTwo()[pri:0, instance:howToDoInJava.testNg.DependentTestExamples@2e377400]">groupTestTwo</td> 
+  <td>main@1311146128</td>   <td></td> </tr>
+<tr bgcolor="a1ed7d">  <td>19/07/23 08:43:19</td>   <td>23</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DependentTestExamples.testFour()[pri:0, instance:howToDoInJava.testNg.DependentTestExamples@2e377400]">testFour</td> 
+  <td>main@1311146128</td>   <td></td> </tr>
+<tr bgcolor="a2b467">  <td>19/07/23 08:43:19</td>   <td>26</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParentClassTest.testTwo()[pri:0, instance:howToDoInJava.testNg.DependentTestExamples@2e377400]">testTwo</td> 
+  <td>main@1311146128</td>   <td></td> </tr>
+<tr bgcolor="a2b467">  <td>19/07/23 08:43:19</td>   <td>31</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParentClassTest.testTwo()[pri:0, instance:howToDoInJava.testNg.ParentClassTest@6aaceffd]">testTwo</td> 
+  <td>main@1311146128</td>   <td></td> </tr>
+<tr bgcolor="a1ed7d">  <td>19/07/23 08:43:19</td>   <td>35</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DependentTestExamples.groupTestOne()[pri:0, instance:howToDoInJava.testNg.DependentTestExamples@2e377400]">groupTestOne</td> 
+  <td>main@1311146128</td>   <td></td> </tr>
+<tr bgcolor="a1ed7d">  <td>19/07/23 08:43:19</td>   <td>37</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DependentTestExamples.testFive()[pri:0, instance:howToDoInJava.testNg.DependentTestExamples@2e377400]">testFive</td> 
+  <td>main@1311146128</td>   <td></td> </tr>
+<tr bgcolor="a2b467">  <td>19/07/23 08:43:19</td>   <td>44</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParentClassTest.testOne()[pri:0, instance:howToDoInJava.testNg.DependentTestExamples@2e377400]">testOne</td> 
+  <td>main@1311146128</td>   <td></td> </tr>
+<tr bgcolor="a2b467">  <td>19/07/23 08:43:19</td>   <td>47</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParentClassTest.testOne()[pri:0, instance:howToDoInJava.testNg.ParentClassTest@6aaceffd]">testOne</td> 
+  <td>main@1311146128</td>   <td></td> </tr>
+<tr bgcolor="a1ed7d">  <td>19/07/23 08:43:19</td>   <td>49</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DependentTestExamples.testThree()[pri:0, instance:howToDoInJava.testNg.DependentTestExamples@2e377400]">testThree</td> 
+  <td>main@1311146128</td>   <td></td> </tr>
 </table>
