--- a/BasicTestNg/test-output/old/Default suite/groups.html
+++ b/BasicTestNg/test-output/old/Default suite/groups.html
@@ -1,1 +1,3 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>test-group</td><td>DependentTestExamples.groupTestThree()[pri:0, instance:howToDoInJava.testNg.DependentTestExamples@2e377400]<br/>DependentTestExamples.groupTestTwo()[pri:0, instance:howToDoInJava.testNg.DependentTestExamples@2e377400]<br/></td></tr>
+</table>
